k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
    version: green   # switch to green during switchover
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
